<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyTree</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="radioSex1">男</string>
    <string name="radioSex0">女</string>
    <string name="bthSub">提交</string>
    <string name="btnRes">重置</string>
    <string name="btnPz">拍照</string>
    <string name="title_activity_fragment1__user">Fragment1_UserActivity</string>
    <string name="title_activity_fragment1_detail">Fragment1_detail</string>
    <string name="btnXC">从相册选择</string>

</resources>
